# book-mcp-server

./: .coverage  .gitignore  .worktreeinclude  CHANGELOG.md  CLAUDE.md  DESIGN.md  Makefile  README.md  SKILL.md  agentic_mcp_server.py  agentic_pipeline_requirements.txt  chapter-title-corrections.json  chapter-title-review.csv  claude_desktop_config.example.json  claude_desktop_config.json  process_all_books.py  pyproject.toml  requirements.txt  server.py  setup.sh  test_new_features.py  test_semantic_search.py  test_semantic_setup.py  test_server.py
.claude/: settings.json
.claude/agents/: pipeline-reviewer.md
.config/: wt.toml
.github/workflows/: ci.yml
agentic_pipeline/: __init__.py  cli.py  config.py  mcp_server.py
agentic_pipeline/adapters/: __init__.py  llm_fallback_adapter.py  processing_adapter.py
agentic_pipeline/agents/: __init__.py  classifier.py  classifier_types.py
agentic_pipeline/approval/: actions.py  queue.py
agentic_pipeline/audit/: __init__.py  trail.py
agentic_pipeline/autonomy/: __init__.py  calibration.py  config.py  metrics.py  spot_check.py
agentic_pipeline/backfill/: __init__.py  manager.py  validator.py
agentic_pipeline/batch/: __init__.py  filters.py  operations.py
agentic_pipeline/converters/: __init__.py  enhanced_epub_parser.py
agentic_pipeline/db/: __init__.py  config.py  connection.py  migrations.py  pipelines.py
agentic_pipeline/health/: __init__.py  doctor.py  monitor.py  stuck_detector.py
agentic_pipeline/orchestrator/: __init__.py  errors.py  logging.py  orchestrator.py
agentic_pipeline/pipeline/: states.py  strategy.py
agentic_pipeline/tests/: __init__.py
agentic_pipeline/validation/: __init__.py  extraction_validator.py
config/strategies/: conservative_v1.json  narrative_v1.json  periodical_v1.json  technical_tutorial_v1.json
docs/: MANUAL-TEST-PLAN.md  PHASE4-PRODUCTION-HARDENING-COMPLETE.md  PHASE5-CONFIDENT-AUTONOMY-COMPLETE.md  PROJECT-LEARNING-TOOLS.md  PROJECT-PLANNING-QUICKREF.md  PROJECT-PLANNING-TOOLS.md  QUICKSTART.md  README.md  REFACTORING-PROPOSAL.md  REFACTORING-SUMMARY.md  SEMANTIC-SEARCH-COMPLETE.md  SESSION-2025-01-28-phase2-phase3.md  USER-GUIDE.md
docs/active/: README.md
docs/archive/: 2025-01-28-agentic-processing-pipeline-design.md  2025-01-28-phase1-foundation.md  2025-01-28-phase2-classifier-agent-design.md  2025-01-28-phase2-classifier-implementation.md  2025-01-28-phase3-orchestrator-design.md  2025-01-28-phase3-orchestrator-implementation.md  2025-01-28-phase4-production-hardening-design.md  2025-01-28-phase4-production-hardening-implementation.md  2025-01-28-phase5-confident-autonomy-design.md  2025-01-28-phase5-confident-autonomy-implementation.md  2025-01-28-session-summary.md  2025-12-22-better-excerpts-design.md  2025-12-22-caching-design.md  2025-12-22-fts-batch-summaries-design.md  2025-12-22-incremental-embeddings-design.md  2026-01-29-batch-processing-session.md  2026-02-11-backlog-cleanup-design.md  2026-02-11-part2-test-results.md  2026-02-11-part3-test-results.md  2026-02-14-embedding-quality-overhaul-design.md  2026-02-14-embedding-quality-overhaul.md  2026-02-14-extraction-quality-gates-design.md  2026-02-14-extraction-quality-gates-implementation.md  2026-02-14-splitter-fix-design.md  2026-02-14-splitter-fix-implementation.md  2026-02-23-response-truncation.md  2026-02-24-slug-id-resolution.md  2026-02-25-design-rationale.md  2026-02-25-unified-book-processing-architecture.md  ARCHITECTURE-REVIEW.md  DOCS-SUMMARY.md  MCP-COMPLIANCE.md  PHASE4-PRODUCTION-HARDENING-COMPLETE.md  PHASE5-CONFIDENT-AUTONOMY-COMPLETE.md  QUICK-WINS-COMPLETE.md  REFACTORING-PROPOSAL.md  REFACTORING-SUMMARY.md  SEMANTIC-SEARCH-COMPLETE.md  SEMANTIC-SEARCH-SETUP.md  SESSION-2025-01-28-phase2-phase3.md  (+2 more)
docs/decisions/: 001-sqlite-wal-mode.md  002-inline-embedding-on-approval.md  003-openai-text-embedding-3-large.md  004-processing-adapter-lazy-import.md  005-rrf-hybrid-search.md  006-fastmcp-stdio-servers.md  007-slug-id-resolution.md  README.md
docs/plans/: 2025-01-28-agentic-processing-pipeline-design.md  2025-01-28-phase1-foundation.md  2025-01-28-phase2-classifier-agent-design.md  2025-01-28-phase2-classifier-implementation.md  2025-01-28-phase3-orchestrator-implementation.md  2025-01-28-phase4-production-hardening-design.md  2025-01-28-phase4-production-hardening-implementation.md  2025-01-28-phase5-confident-autonomy-design.md  2025-01-28-phase5-confident-autonomy-implementation.md  2025-01-28-session-summary.md  2025-12-22-fts-batch-summaries-design.md  2026-02-14-embedding-quality-overhaul-design.md  2026-02-14-extraction-quality-gates-design.md  (+2 more)
eval/: gold-queries-manual.json  gold-queries.json
migrations/: __init__.py  add_embedding_tracking.py  add_summary_embeddings.py  fix_chapter_paths.py  fix_embedding_dimensions.py
ref/: cli-commands.md  db-schema.md  mcp-tools.md  module-map.md  pipeline-architecture.md
scripts/: audit_chapters.py  classify_library.py  com.taylorstephens.agentic-pipeline-worker.plist  extract_chapter_titles.py  process_all_books.py  retrieval_eval.py  run-worker.sh
src/: __init__.py  config.py  database.py  server.py
tests/: conftest.py  test_analytics_tools.py  test_anthropic_provider.py  test_approval_actions.py  test_approval_queue.py  test_approve_nonblocking.py  test_audit_trail.py  test_autonomy_config.py  test_autonomy_metrics.py  test_backfill.py  test_batch_filters.py  test_batch_operations.py  test_cache.py  test_calibration.py  test_chapter_truncation.py  test_chunk_loader.py  test_chunker.py  test_chunks_migration.py  test_classifier.py  test_classifier_types.py  test_claude_code_provider.py  test_cli.py  test_cli_classify.py  test_cli_library_issues.py  test_cli_migration_commands.py  test_cli_orchestrator.py  test_cli_phase4.py  test_cli_phase5.py  test_cli_spot_check.py  test_cli_update_title.py  test_config.py  test_data_version.py  test_db_config.py  test_db_connection.py  test_discovery_tools.py  test_doctor.py  test_enhanced_epub_parser.py  test_ensure_library_schema.py  test_extraction_validator.py  test_force_fallback.py  (+52 more)
(+68 files in other folders)
