[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-pipeline"
version = "0.1.0"
description = "Agentic AI layer for book ingestion pipeline"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "watchdog>=3.0",
    "mcp>=1.0",
    "openai>=1.0",
    "anthropic>=0.18",
    "ebooklib>=0.18",
    "numpy>=1.24",
    "tiktoken>=0.5",
    "cohere>=5.0",
    # "book-ingestion",  # Install separately: pip install -e /path/to/book-ingestion-python
]

[tool.setuptools.packages.find]
include = ["agentic_pipeline*", "src*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[project.scripts]
agentic-pipeline = "agentic_pipeline.cli:main"
