[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-pipeline"
version = "0.1.0"
description = "Agentic AI layer for book ingestion pipeline"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "watchdog>=3.0",
    "mcp>=1.0",
    "openai>=1.0",
    "anthropic>=0.18",
    "ebooklib>=0.18",
    "numpy>=1.24",
    "tiktoken>=0.5",
    "cohere>=5.0",
    # "book-ingestion",  # Install separately: pip install -e /path/to/book-ingestion-python
]

[tool.setuptools.packages.find]
include = ["agentic_pipeline*", "src*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services (OPENAI_API_KEY, book_ingestion, real DB). Run with '-m integration'.",
    "e2e: marks end-to-end CLI tests that exercise the full pipeline via subprocess.",
    "unit: marks pure unit tests with no I/O dependencies.",
]
# Default run skips integration tests (require real DB/API keys)
addopts = "-m 'not integration'"

[tool.coverage.run]
source = ["agentic_pipeline", "src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "agentic_pipeline/agents/prompts/*",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
# Current: ~42%. src/ library utilities are under-tested.
# Target path: 42% → 55% (add src/ utils tests) → 70% (full pipeline coverage)
fail_under = 40
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = [
    "E501",  # line too long — handled by formatter, not enforced in CI
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # test files import for side-effects

[project.scripts]
agentic-pipeline = "agentic_pipeline.cli:main"
