[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-pipeline"
version = "0.1.0"
description = "Agentic AI layer for book ingestion pipeline"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "watchdog>=3.0",
    "mcp>=1.0",
    # agentic_mcp_server.py imports the standalone `fastmcp`. The other servers
    # use the FastMCP vendored inside `mcp` (mcp.server.fastmcp), so this went
    # undeclared and only worked where it had been pip-installed by hand.
    # Pinned below 3: v3 drops FastMCP._tool_manager, which the wrapper's
    # registration test introspects.
    "fastmcp>=2.0,<3",
    "openai>=1.0",
    "anthropic>=0.18",
    "ebooklib>=0.18",
    "numpy>=1.24",
    "tiktoken>=0.5",
    "cohere>=5.0",
    # PDF source-coverage validation (extraction_validator._count_pdf_words).
    # Lazy-imported and degrades to None when absent, but declared so the
    # check actually runs on fresh installs and in CI. >=1.24 for the
    # `with fitz.open(...)` context manager.
    "pymupdf>=1.24",
    # agentic_pipeline/converters/enhanced_epub_parser.py imports bs4 at module
    # scope and converters/__init__.py imports that module eagerly, so any
    # `import agentic_pipeline.converters` needs it. It was pip-installed by hand
    # into the live .venv and never declared — invisible until uv.lock made
    # environments strictly reproducible, at which point a fresh worktree venv
    # raises ModuleNotFoundError. The suite masks it because the tests that reach
    # converters/ are guarded by pytest.importorskip("book_ingestion").
    "beautifulsoup4>=4.12",
    # "book-ingestion",  # Install separately: pip install -e /path/to/book-ingestion-python
]

[tool.setuptools.packages.find]
include = ["agentic_pipeline*", "src*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services (OPENAI_API_KEY, book_ingestion, real DB). Run with '-m integration'.",
    "e2e: marks end-to-end CLI tests that exercise the full pipeline via subprocess.",
    "unit: marks pure unit tests with no I/O dependencies.",
]
# Default run skips integration tests (require real DB/API keys)
addopts = "-m 'not integration'"

[tool.coverage.run]
source = ["agentic_pipeline", "src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "agentic_pipeline/agents/prompts/*",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
# Current: ~42%. src/ library utilities are under-tested.
# Target path: 42% → 55% (add src/ utils tests) → 70% (full pipeline coverage)
fail_under = 40
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = [
    "E501",  # line too long — handled by formatter, not enforced in CI
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # test files import for side-effects

[project.scripts]
agentic-pipeline = "agentic_pipeline.cli:main"

[tool.uv]
# Pinned to the versions this repo's live .venv runs as of 2026-07-22, so uv.lock
# captures known-good state instead of a fresh latest-compatible resolve. An
# unconstrained `uv lock` drifted 67 packages including numpy 1.26->2.5 and
# cohere 5->7 — unacceptable on a shared MCP provider that periodical-parser,
# book-ingestion-python, archana-portfolio and archana-interview launch out of.
#
# Upgrades are deliberate: bump the pin here, re-run `uv lock --python 3.12`,
# re-run the suite, and smoke each consumer.
#
# NB book-ingestion is intentionally absent (installed separately as an editable
# sibling, see the dependencies comment above); uv sync will not provide it.
constraint-dependencies = [
    "annotated-types==0.7.0",
    "anthropic==0.77.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "Authlib==1.6.6",
    "beartype==0.22.9",
    "beautifulsoup4==4.14.3",
    "cachetools==6.2.6",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "cohere==5.20.5",
    "coverage==7.13.4",
    "cryptography==46.0.4",
    "cyclopts==4.5.1",
    "Deprecated==1.3.1",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring_parser==0.17.0",
    "docutils==0.22.4",
    "EbookLib==0.20",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.1",
    "execnet==2.1.2",
    "fakeredis==2.33.0",
    "fastavro==1.12.1",
    "fastmcp==2.14.4",
    "filelock==3.20.3",
    "fsspec==2026.1.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx-sse==0.4.3",
    "httpx==0.28.1",
    "huggingface_hub==1.3.5",
    "idna==3.11",
    "importlib_metadata==8.7.1",
    "iniconfig==2.3.0",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.1.0",
    "jaraco.functools==4.4.0",
    "Jinja2==3.1.6",
    "jiter==0.12.0",
    "joblib==1.5.3",
    "jsonref==1.1.0",
    "jsonschema-path==0.3.4",
    "jsonschema-specifications==2025.9.1",
    "jsonschema==4.26.0",
    "keyring==25.7.0",
    "lupa==2.6",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "mcp==1.26.0",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==1.26.4",
    "openai==2.16.0",
    "openapi-pydantic==0.5.1",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-prometheus==0.60b1",
    "opentelemetry-instrumentation==0.60b1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "packaging==26.0",
    "pathable==0.4.4",
    "pathvalidate==3.3.1",
    "pikepdf==10.5.0",
    "pillow==12.1.1",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "prometheus_client==0.24.1",
    "py-key-value-aio==0.3.0",
    "py-key-value-shared==0.3.0",
    "pycparser==3.0",
    "pydantic-settings==2.12.0",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "pydocket==0.16.6",
    "Pygments==2.19.2",
    "PyJWT==2.10.1",
    "PyMuPDF==1.26.7",
    "pyperclip==1.11.0",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    "pytest==9.0.2",
    "python-dotenv==1.2.1",
    "python-json-logger==4.0.0",
    "python-multipart==0.0.22",
    "PyYAML==6.0.3",
    "redis==7.1.0",
    "referencing==0.36.2",
    "regex==2026.1.15",
    "requests==2.32.5",
    "rich-rst==1.3.2",
    "rich==14.3.1",
    "rpds-py==0.30.0",
    "ruff==0.14.14",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "sentence-transformers==5.2.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8.3",
    "sse-starlette==3.2.0",
    "starlette==0.52.1",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tokenizers==0.22.2",
    "torch==2.2.2",
    "tqdm==4.67.1",
    "transformers==5.0.0",
    "typer-slim==0.21.1",
    "typer==0.21.1",
    "types-requests==2.32.4.20260107",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
    "watchdog==6.0.0",
    "websockets==16.0",
    "wrapt==1.17.3",
    "zipp==3.23.0",
]
